--- a/model.ipynb
+++ b/model.ipynb
@@ -2023,6 +2023,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "afdb901d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sympSeverity.to_csv(\"data/processedseverity.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "edd7e854",
    "metadata": {},
