--- a/trying.ipynb
+++ b/trying.ipynb
@@ -357,9 +357,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7214ade3",
+   "metadata": {},
+   "source": [
+    "#### For docx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c897f3e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import docx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "09c89f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getText(filename):\n",
+    "    doc = docx.Document(filename)\n",
+    "    fullText = []\n",
+    "    for para in doc.paragraphs:\n",
+    "        fullText.append(para.text)\n",
+    "    return '\\n'.join(fullText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "905da3f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cleanText(text):\n",
+    "    text4=[]\n",
+    "    text1 = text.replace('Hospital Medical Report','')\n",
+    "    text2 = text1.split('\\n')\n",
+    "    text3 = text2[5:]\n",
+    "    return text3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "f69b2a2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = getText('11.docx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c24968aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = cleanText(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "5e20406b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " 'Symptom1: \\t continuous_sneezing',\n",
+       " '',\n",
+       " 'Symptom2: \\t shivering',\n",
+       " '',\n",
+       " 'Symptom3: \\t chills',\n",
+       " '',\n",
+       " 'Symptom4: \\t watering_from_eyes',\n",
+       " '',\n",
+       " 'Symptom5: \\t',\n",
+       " '',\n",
+       " 'Symptom6: \\t',\n",
+       " '',\n",
+       " 'Symptom7: \\t',\n",
+       " '',\n",
+       " 'Symptom8: \\t',\n",
+       " '',\n",
+       " 'Symptom9: \\t',\n",
+       " '',\n",
+       " 'Symptom10: \\t',\n",
+       " '',\n",
+       " 'Symptom11: \\t',\n",
+       " '',\n",
+       " 'Symptom12: \\t',\n",
+       " '',\n",
+       " 'Symptom13: \\t',\n",
+       " '',\n",
+       " 'Symptom14: \\t',\n",
+       " '',\n",
+       " 'Symptom15: \\t',\n",
+       " '',\n",
+       " 'Symptom16: \\t',\n",
+       " '',\n",
+       " 'Symptom17: \\t',\n",
+       " '',\n",
+       " 'Disease: \\tAllergy']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59a81ee",
+   "id": "d89d812a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "965d92e5",
    "metadata": {},
    "outputs": [],
    "source": []
